15183 Additional locations filtering

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -57,7 +57,7 @@
     "    preprocess_sentinel_raw_data, read_raster, extract_tci)\n",
     "from sip_plot_boundary_detection_nn.code.engine import load_model, val_tfs\n",
     "from sip_plot_boundary_detection_nn.code.dataset import BoundaryDetector\n",
-    "from sip_plot_boundary_detection_nn.code.filter_polygons import filter_polygons\n",
+    "from sip_plot_boundary_detection_nn.code.filter_polygons import filter_polygons, filter_sindex\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -198,7 +198,10 @@
     "local = False\n",
     "ukr_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/custom.geo.json\")\n",
     "if os.path.exists(ukr_shapefile):\n",
-    "    usa_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
+    "    # usa_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
+    "    oh_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/ohio.geojson\")\n",
+    "    in_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/indiana.geojson\")\n",
+    "    il_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/illinois.geojson\")\n",
     "    config_file = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/code/config.yaml\")\n",
     "    API_KEY = os.path.join(BASE, \"data/notebooks/pbdnn/sentinel2_google_api_key.json\")\n",
     "    PBD_DIR = os.path.join(BASE, \"data/notebooks/pbdnn\")\n",
@@ -206,7 +209,10 @@
     "    local = True\n",
     "else:\n",
     "    ukr_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/custom.geo.json\")\n",
-    "    usa_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
+    "    #usa_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
+    "    oh_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/ohio.geojson\")\n",
+    "    in_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/indiana.geojson\")\n",
+    "    il_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/illinois.geojson\")\n",
     "    config_file = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/code/config.yaml\")\n",
     "    sentinel_tiles_path = os.path.join(BASE, \"notebooks/pbdnn/sentinel2grid.geojson\")\n",
     "    local = False\n",
@@ -228,28 +234,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ukraine = gpd.read_file(ukr_shapefile)\n",
-    "usa = gpd.read_file(usa_shapefile)\n",
+    "locations = {'notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/ukr_non_agriculture.geojson': ukr_shapefile,\n",
+    "             'notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/ohio_shape.geojson': oh_shapefile,\n",
+    "             'notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/indiana_shape.geojson': in_shapefile,\n",
+    "             'notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/illinois_shape.geojson': il_shapefile\n",
+    "            }\n",
+    "filter_path = None\n",
     "aoi = gpd.read_file(aoi_filename)\n",
     "\n",
-    "if local:\n",
-    "    if aoi.intersects(ukraine)[0]:\n",
-    "        filter_path = os.path.join(\n",
-    "            BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/ukr_non_agriculture.geojson\")\n",
-    "    elif aoi.intersects(usa)[0]:\n",
-    "        filter_path = os.path.join(\n",
-    "            BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/us_shape.geojson\")\n",
-    "    else:\n",
-    "        filter_path = None\n",
-    "else:\n",
-    "    if aoi.intersects(ukraine)[0]:\n",
-    "        filter_path = os.path.join(\n",
-    "            BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/ukr_non_agriculture.geojson\")\n",
-    "    elif aoi.intersects(usa)[0]:\n",
-    "        filter_path = os.path.join(\n",
-    "            BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/us_shape.geojson\")\n",
-    "    else:\n",
-    "        filter_path = None"
+    "for filters, location in locations.items():\n",
+    "    loc = gpd.read_file(location)\n",
+    "    if aoi.intersects(loc)[0]:\n",
+    "        if local:\n",
+    "            filter_path = os.path.join(BASE, \"data\", filters)\n",
+    "        else:\n",
+    "            filter_path = os.path.join(BASE, filters)"
    ]
   },
   {
@@ -435,6 +434,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "filters.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def stitch_tiles(paths, out_raster_path='test.tif'):\n",
     "    tiles = []\n",
     "    \n",
@@ -549,14 +557,16 @@
    "source": [
     "if len(filters) != 0:\n",
     "    try:\n",
-    "        polys = filter_polygons(polygons, filters)\n",
+    "        polys = filter_sindex(polygons, filters)\n",
     "    except Exception as e:\n",
-    "        print(e, '\\n', 'fixing geometries...')\n",
+    "        print(e)\n",
     "        filters['geometry'] = filters.buffer(0)\n",
     "        polys = filter_polygons(polygons, filters)\n",
+    "    target_crs = filters.crs\n",
     "else:\n",
     "    print('Non-agricultural data is not found for a given AOI, proceeding without filtering')\n",
-    "    polys = polygons"
+    "    polys = polygons\n",
+    "    target_crs = polys.crs"
    ]
   },
   {
@@ -577,7 +587,7 @@
    "outputs": [],
    "source": [
     "result_df = pd.concat([result_df, df])\n",
-    "gdf = process_polygons(result_df, filters.crs)\n",
+    "gdf = process_polygons(result_df, target_crs)\n",
     "gdf.head(3)"
    ]
   },
@@ -591,14 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-14T07:33:11.813667Z",
-     "iopub.status.busy": "2021-04-14T07:33:11.813347Z",
-     "iopub.status.idle": "2021-04-14T07:33:11.819019Z",
-     "shell.execute_reply": "2021-04-14T07:33:11.818743Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tmp_suffix = \".temp\"\n",
@@ -625,14 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-14T07:33:11.820922Z",
-     "iopub.status.busy": "2021-04-14T07:33:11.820609Z",
-     "iopub.status.idle": "2021-04-14T07:33:11.823326Z",
-     "shell.execute_reply": "2021-04-14T07:33:11.823002Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -644,14 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-14T07:33:11.825303Z",
-     "iopub.status.busy": "2021-04-14T07:33:11.824989Z",
-     "iopub.status.idle": "2021-04-14T07:33:11.830533Z",
-     "shell.execute_reply": "2021-04-14T07:33:11.830210Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -663,14 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-14T07:33:11.832557Z",
-     "iopub.status.busy": "2021-04-14T07:33:11.832246Z",
-     "iopub.status.idle": "2021-04-14T07:33:11.837465Z",
-     "shell.execute_reply": "2021-04-14T07:33:11.837739Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
