14969. Add area calculation and metadata for legend

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -22,6 +22,8 @@
     "import os\n",
     "import shutil\n",
     "import sys\n",
+    "import yaml\n",
+    "import json\n",
     "import rasterio\n",
     "import geopandas as gpd\n",
     "import numpy as np\n",
@@ -92,6 +94,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Creating metadata to be displayed on the frontend: legend and area calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(CONFIG_PATH) as f:\n",
+    "    config = yaml.load(f)\n",
+    "    path_to_class_names = config['predict']['class_names_json']\n",
+    "\n",
+    "if os.path.exists(path_to_class_names):\n",
+    "    with open(path_to_class_names) as f:\n",
+    "        class_names = json.load(f)\n",
+    "        class_names = ['Developed areas' if class_name == 'Developed' else class_name for class_name in class_names]\n",
+    "else:\n",
+    "    raise FileNotFoundError()\n",
+    "\n",
+    "NUM_CLASSES = len(class_names)\n",
+    "arr = np.array(range(0, NUM_CLASSES)) / NUM_CLASSES\n",
+    "colors = plt.cm.jet(arr)\n",
+    "colors[0] = (0,0,0,1)\n",
+    "\n",
+    "labels = []\n",
+    "\n",
+    "for label, name in enumerate(class_names):\n",
+    "    class_area = len(img[img == label]) / 10 ** 4\n",
+    "    class_color = tuple(map(int, colors[label][:-1] * 255))\n",
+    "    if class_area != 0:\n",
+    "        labels.append({\n",
+    "            'color': class_color, \n",
+    "            'name': name,\n",
+    "            'area': class_area\n",
+    "        })\n",
+    "    else:\n",
+    "        labels.append({\n",
+    "            'color': class_color, \n",
+    "            'name': name\n",
+    "        })\n",
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Scale class prediction raster and make it colored"
    ]
   },
@@ -101,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_CLASSES = 7\n",
+    "NUM_CLASSES = len(class_names)\n",
     "nodata = 0\n",
     "mask = mask.astype(bool)\n",
     "scaled = img.astype(np.float32) / NUM_CLASSES\n",
@@ -139,6 +189,7 @@
     "    dst.update_tags(start_date=START_DATE, \n",
     "                    end_date=END_DATE, \n",
     "                    request_id=REQUEST_ID,\n",
+    "                    labels=labels,\n",
     "                    name=NAME)\n",
     "    for i in range(scaled.shape[-1]):\n",
     "        dst.write(scaled[:,:,i], indexes=i+1)"
