15249. Update name for crop map results

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "USER = os.getenv('NB_USER')\n",
-    "NAME = 'Soybean corn map'"
+    "NAME = 'Crop map'"
    ]
   },
   {
