15249. Update NDVI color mapping

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -13,10 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AOI = 'POLYGON ((35.4638671875000000 50.4365160169863316, 34.6618652343750000 50.0289165635219035, 34.7827148437500000 48.9549736980886792, 36.3757324218749929 48.3781454697624440, 37.4194335937500000 48.7851519980431547, 38.3038330078125000 49.4431287580300491, 37.9193115234374929 50.4120182466821731, 36.6009521484375000 50.5553249825196716, 35.4638671875000000 50.4365160169863316))' \n",
-    "REQUEST_ID = 10\n",
-    "START_DATE = \"2020-08-01\"\n",
-    "END_DATE = \"2020-08-10\""
+    "AOI = 'POLYGON ((-85.299088 40.339368, -85.332047 40.241477, -85.134979 40.229427, -85.157639 40.34146, -85.299088 40.339368))' \n",
+    "REQUEST_ID = 51\n",
+    "START_DATE = \"2020-07-01\"\n",
+    "END_DATE = \"2020-08-01\""
    ]
   },
   {
@@ -427,7 +427,7 @@
     "RESULTS_DIR = os.path.join(BASE, \"results/example/tci_ndvi\")\n",
     "\n",
     "NOTEBOOK_DIR = os.path.join(BASE, \"notebooks/example/tci_ndvi\")\n",
-    "COLORMAP_BRBG = os.path.join(NOTEBOOK_DIR, \"brbg.npy\") "
+    "COLORMAP_BRBG = os.path.join(NOTEBOOK_DIR, \"ndvi_colormap.npy\") "
    ]
   },
   {
@@ -445,8 +445,9 @@
    "source": [
     "def prepare_colors(colors):\n",
     "    colors = np.load(COLORMAP_BRBG)\n",
-    "    # delete last channel, we use rgb\n",
-    "    colors = np.delete(colors, 3, axis=1)\n",
+    "    if colors.shape[1] == 4:\n",
+    "        # delete last channel, we use rgb\n",
+    "        colors = np.delete(colors, 3, axis=1)\n",
     "    # colormap colors values in range [0-255], but in our case 0 - no data, -> have to color as [0, 0, 0] \n",
     "    colors[colors == 0] = 1\n",
     "    colors[0] = [0, 0, 0]\n",
@@ -589,15 +590,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "RESULTS_DIR = os.path.join(RESULTS_DIR, str(REQUEST_ID))\n",
     "RESULTS_DIR"
    ]
@@ -630,9 +622,9 @@
     "        transformed_poly = to_crs(polygon, tile_crs)\n",
     "        \n",
     "        # Crop and save NDVI\n",
-    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"NDVI Vegetation Index\")\n",
+    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\")\n",
     "        # Crop and save TCI\n",
-    "        crop(paths['TCI'], temp_tci_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"True Color Image\")\n",
+    "        crop(paths['TCI'], temp_tci_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
     "        \n",
     "        print(f\"{tile}: End calculation TCI, NDVI\")\n",
     "    \n",
@@ -645,6 +637,13 @@
     "    except Exception as e:\n",
     "        print(f\"{tile}: Cannot calculate TCI, NDVI: {str(e)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
