15252. Change labels structure to JSON format compatible

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "AOI = 'POLYGON ((-85.483932 40.367801, -85.64349199999999 40.367801, -85.64349199999999 40.226597, -85.483932 40.226597, -85.483932 40.367801))'\n",
-    "START_DATE = '2019-05-01'\n",
-    "END_DATE = '2019-08-30'"
+    "START_DATE = '2020-04-01'\n",
+    "END_DATE = '2020-09-01'"
    ]
   },
   {
@@ -123,18 +123,20 @@
     "\n",
     "for label, name in enumerate(class_names):\n",
     "    class_area = len(img[img == label]) / 10 ** 4\n",
-    "    class_color = tuple(map(int, colors[label][:-1] * 255))\n",
+    "    # convert list of float values into string representing color\n",
+    "    class_color = \",\".join(list(map(lambda x: str(int(x)), colors[label][:-1] * 255)))\n",
     "    if class_area != 0:\n",
     "        labels.append({\n",
-    "            'color': class_color, \n",
-    "            'name': name,\n",
-    "            'area': class_area\n",
+    "            \"color\": class_color, \n",
+    "            \"name\": name,\n",
+    "            \"area\": class_area\n",
     "        })\n",
     "    else:\n",
     "        labels.append({\n",
-    "            'color': class_color, \n",
-    "            'name': name\n",
+    "            \"color\": class_color, \n",
+    "            \"name\": name\n",
     "        })\n",
+    "labels = json.dumps(labels)\n",
     "labels"
    ]
   },
