Change name to Urban areas instead of Developed areas

--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -110,7 +110,7 @@
     "if os.path.exists(path_to_class_names):\n",
     "    with open(path_to_class_names) as f:\n",
     "        class_names = json.load(f)\n",
-    "        class_names = ['Developed areas' if class_name == 'Developed' else class_name for class_name in class_names]\n",
+    "        class_names = ['Urban areas' if class_name == 'Developed' else class_name for class_name in class_names]\n",
     "else:\n",
     "    raise FileNotFoundError()\n",
     "\n",
