15362 Updated model and inference procedure

--- a/data/notebooks/pbdnn/PBDNN_inference.ipynb
+++ b/data/notebooks/pbdnn/PBDNN_inference.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AOI = 'POLYGON ((30.2759366834769 48.51505083641415, 30.61727452548106 48.45927941996875, 30.64285389693346 48.5330821966183, 30.30277405680401 48.58843427910546, 30.2759366834769 48.51505083641415))'\n",
+    "AOI = 'POLYGON ((-85.299088 40.339368, -85.332047 40.241477, -85.134979 40.229427, -85.157639 40.34146, -85.299088 40.339368))'\n",
     "START_DATE = \"2020-05-01\"\n",
     "END_DATE = \"2020-06-30\"\n",
     "\n",
@@ -58,6 +58,7 @@
     "from sip_plot_boundary_detection_nn.code.engine import load_model, val_tfs\n",
     "from sip_plot_boundary_detection_nn.code.dataset import BoundaryDetector\n",
     "from sip_plot_boundary_detection_nn.code.filter_polygons import filter_polygons, filter_sindex\n",
+    "from sip_plot_boundary_detection_nn.code.utils import transform_crs\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -184,8 +185,8 @@
     "RESULTS_DIR = os.path.join(BASE, \"results/pbdnn\")\n",
     "PBD_DIR = os.path.join(BASE, \"notebooks/pbdnn\")\n",
     "\n",
-    "BANDS = {'TCI'}\n",
-    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
+    "BANDS = {'TCI', 'B08'}\n",
+    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 15.0, }\n",
     "PRODUCT_TYPE = 'L2A'"
    ]
   },
@@ -198,7 +199,6 @@
     "local = False\n",
     "ukr_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/custom.geo.json\")\n",
     "if os.path.exists(ukr_shapefile):\n",
-    "    # usa_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
     "    oh_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/ohio.geojson\")\n",
     "    in_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/indiana.geojson\")\n",
     "    il_shapefile = os.path.join(BASE, \"data/notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/illinois.geojson\")\n",
@@ -209,7 +209,6 @@
     "    local = True\n",
     "else:\n",
     "    ukr_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/ukr_shapes/custom.geo.json\")\n",
-    "    #usa_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/custom.geo.json\")\n",
     "    oh_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/ohio.geojson\")\n",
     "    in_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/indiana.geojson\")\n",
     "    il_shapefile = os.path.join(BASE, \"notebooks/pbdnn/sip_plot_boundary_detection_nn/usa_shapes/states_shapes/illinois.geojson\")\n",
@@ -242,13 +241,13 @@
     "filter_path = None\n",
     "aoi = gpd.read_file(aoi_filename)\n",
     "\n",
-    "for filters, location in locations.items():\n",
+    "for filters_, location in locations.items():\n",
     "    loc = gpd.read_file(location)\n",
     "    if aoi.intersects(loc)[0]:\n",
     "        if local:\n",
-    "            filter_path = os.path.join(BASE, \"data\", filters)\n",
+    "            filter_path = os.path.join(BASE, \"data\", filters_)\n",
     "        else:\n",
-    "            filter_path = os.path.join(BASE, filters)"
+    "            filter_path = os.path.join(BASE, filters_)"
    ]
   },
   {
@@ -308,39 +307,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regex = r'\\<CLOUDY_PIXEL_PERCENTAGE\\>[0-9]*\\.?[0-9]*</CLOUDY_PIXEL_PERCENTAGE>'\n",
-    "\n",
-    "def get_min_clouds(loadings, max_ptc=5):\n",
-    "    filtered = dict()\n",
-    "    min_ptc = max_ptc\n",
-    "    \n",
-    "    for tile, folders in loadings.items():\n",
-    "        filtered_folders = set()\n",
-    "        for folder in folders:\n",
-    "            for file in os.listdir(folder):\n",
-    "                \n",
-    "                if \"MTD_TL.xml\" in file:\n",
-    "                    \n",
-    "                    with open(os.path.join(folder, file)) as f:\n",
-    "                        ptc = f.read()\n",
-    "                        ptc = re.search(regex, ptc)\n",
-    "                        \n",
-    "                        if ptc is not None:\n",
-    "                            ptc = ''.join([x for x in ptc.group(0) if x.isdigit() or x=='.'])\n",
-    "                            # print(ptc)\n",
-    "                            filtered_folders.add((ptc, folder))\n",
-    "    \n",
-    "        filtered[tile] = sorted(filtered_folders)[0][1]\n",
-    "\n",
-    "    return filtered"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def load_images(api_key, tiles, start_date, end_date, output_dir, product_type=\"L2A\"):\n",
     "    loader = Sentinel2Downloader(api_key)\n",
     "    loadings = dict()\n",
@@ -369,6 +335,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cloud_regex = r'\\<CLOUDY_PIXEL_PERCENTAGE\\>[0-9]*\\.?[0-9]*</CLOUDY_PIXEL_PERCENTAGE>'\n",
+    "\n",
+    "def get_min_clouds(loadings, max_ptc=5):\n",
+    "    filtered = dict()\n",
+    "    min_ptc = max_ptc\n",
+    "    \n",
+    "    for tile, folders in loadings.items():\n",
+    "        filtered_folders = set()\n",
+    "        for folder in folders:\n",
+    "            for file in os.listdir(folder):\n",
+    "                \n",
+    "                if \"MTD_TL.xml\" in file: # MTD_TL.xml\n",
+    "                    \n",
+    "                    with open(os.path.join(folder, file)) as f:\n",
+    "                        ptc = f.read()\n",
+    "                        ptc = re.search(cloud_regex, ptc)\n",
+    "                        \n",
+    "                        if ptc is not None:\n",
+    "                            ptc = ''.join([x for x in ptc.group(0) if x.isdigit() or x=='.'])\n",
+    "                            filtered_folders.add((ptc, folder))\n",
+    "                            \n",
+    "                else:\n",
+    "                    filtered_folders.add(('50', folder))\n",
+    "\n",
+    "        filtered[tile] = sorted(filtered_folders)[0][1]\n",
+    "\n",
+    "    return filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Credit for baseline: work/notebooks/pw/raster_predict.ipynb\n",
     "def create_style():\n",
     "    style = {'color': '#C0C0C0', 'stroke': 'e80e27', 'stroke-width': 2}\n",
@@ -383,29 +384,28 @@
    "outputs": [],
    "source": [
     "config['device'] = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "config['device'] = 'cpu'\n",
     "\n",
     "if local:\n",
     "    model_path = os.path.join(\n",
-    "        BASE, 'data/notebooks/pbdnn/sip_plot_boundary_detection_nn/models/UnetPlusPlus_imagenet_30_denmark_filtered.pth')\n",
+    "        BASE, 'data/notebooks/pbdnn/sip_plot_boundary_detection_nn/models/HighResolutionNet32_none_15_nir_tci_multitemporal.pth')\n",
     "else:\n",
     "    model_path = os.path.join(\n",
-    "        BASE, 'notebooks/pbdnn/sip_plot_boundary_detection_nn/models/UnetPlusPlus_imagenet_30_denmark_filtered.pth')\n",
+    "        BASE, 'notebooks/pbdnn/sip_plot_boundary_detection_nn/models/HighResolutionNet32_none_15_nir_tci_multitemporal.pth')\n",
     "\n",
-    "model = load_model(config['model'].lower(), model_path, config['device'])\n",
+    "model = load_model(config['model'].lower(), model_path, config['device'], channels=4)\n",
     "    \n",
     "print('Model loaded successfully')\n",
     "    \n",
-    "date_tile_info = get_tiles(aoi_filename, sentinel_tiles_path)\n",
-    "loadings = load_images(API_KEY, date_tile_info.tileID.values, START_DATE, END_DATE, LOAD_DIR, PRODUCT_TYPE)\n",
-    "checked = check_nodata(loadings, PRODUCT_TYPE)\n",
-    "\n",
-    "checked = get_min_clouds(checked)\n",
-    "\n",
     "origin_name = os.path.basename(aoi_filename).replace(\".geojson\", \"\")\n",
-    "\n",
-    "print(f'total tiles: {len(loadings)}')\n",
-    "\n",
-    "detector = BoundaryDetector(model, tiles_dir=f'/home/{NB_USER}/work/satellite_imagery')\n",
+    "df = pd.DataFrame({\n",
+    "    'aoi_fp': [''],\n",
+    "    'b08_tile_path': [''],\n",
+    "    'filters_fp': [''],\n",
+    "    'geom_fp': [''],\n",
+    "    'tci_tile_path': ['']\n",
+    "})\n",
+    "detector = BoundaryDetector(model, df, tiles_dir=f'/home/{NB_USER}/work/satellite_imagery')\n",
     "print('Detector is ready')"
    ]
   },
@@ -423,9 +423,17 @@
     "            \n",
     "    if 'ukr_non_agriculture' in filter_path:\n",
     "        filters['geometry'] = filters.buffer(0)\n",
-    "            \n",
+    "\n",
     "    filters = filters[filters.intersects(aoi.geometry.values[0])]\n",
-    "    print('filters are loaded')"
+    "    if len(filters) > 1:\n",
+    "        df_crs = filters.crs\n",
+    "        filters = gpd.GeoDataFrame(\n",
+    "            {'geometry': [filters[filters.geometry.is_valid].unary_union]})\n",
+    "        filters.crs = df_crs\n",
+    "        \n",
+    "    print('filters are loaded')\n",
+    "else:\n",
+    "    filters = None"
    ]
   },
   {
@@ -434,7 +442,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filters.head(3)"
+    "filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = START_DATE.split('-')[0]\n",
+    "\n",
+    "starts = [f'{year}-06-01', f'{year}-06-08', f'{year}-06-15', f'{year}-06-22', \n",
+    "          f'{year}-07-01', f'{year}-07-08', f'{year}-07-15', f'{year}-07-22']\n",
+    "\n",
+    "ends = [f'{year}-06-07', f'{year}-06-14', f'{year}-06-21', f'{year}-06-30', \n",
+    "        f'{year}-07-07', f'{year}-07-14', f'{year}-07-21', f'{year}-07-30']"
    ]
   },
   {
@@ -445,14 +468,24 @@
    "source": [
     "def stitch_tiles(paths, out_raster_path='test.tif'):\n",
     "    tiles = []\n",
+    "    tmp_files = []\n",
     "    \n",
     "    for i, path in enumerate(paths):\n",
-    "        file = rasterio.open(path)\n",
+    "        if i == 0:\n",
+    "            file = rasterio.open(path)\n",
+    "            meta, crs = file.meta, file.crs\n",
+    "        else:\n",
+    "            tmp_path = path.replace(\n",
+    "                '.jp2', '_tmp.jp2').replace('.tif', '_tmp.tif')\n",
+    "            crs_transformed = transform_crs(path, tmp_path, \n",
+    "                                            dst_crs=crs, \n",
+    "                                            resolution=None)\n",
+    "            tmp_files.append(crs_transformed)\n",
+    "            file = rasterio.open(crs_transformed)\n",
     "        tiles.append(file)\n",
     "            \n",
-    "        \n",
     "    tile_arr, transform = merge(tiles, method='last')\n",
-    "    meta, crs = file.meta, file.crs\n",
+    "    \n",
     "    \n",
     "    meta.update({\"driver\": \"GTiff\",\n",
     "                 \"height\": tile_arr.shape[1],\n",
@@ -469,10 +502,40 @@
     "    for tile in tiles:\n",
     "        tile.close()\n",
     "        \n",
+    "    for tmp_file in tmp_files:\n",
+    "        try:\n",
+    "            os.remove(tmp_file)\n",
+    "        except FileNotFoundError:\n",
+    "            print(f'Tile {tmp_file} was removed or renamed, skipping')\n",
+    "        \n",
     "    with rasterio.open(out_raster_path, \"w\", **meta) as dst:\n",
     "        dst.write(tile_arr)\n",
     "    \n",
     "    return out_raster_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_img_pred(images):\n",
+    "    out_path = images[0].replace('.tif', '_mean.tif')\n",
+    "    to_stack = []\n",
+    "    for img in images:\n",
+    "        with rasterio.open(img) as src:\n",
+    "            img_arr = src.read(1)\n",
+    "            to_stack.append(img_arr)\n",
+    "            meta=src.meta\n",
+    "            \n",
+    "    mean_img = np.stack(to_stack, axis=-1)\n",
+    "    mean_img = np.mean(mean_img, axis=-1)\n",
+    "    \n",
+    "    with rasterio.open(out_path, 'w', **meta) as dst:\n",
+    "        dst.write(mean_img.astype(np.uint8), 1)\n",
+    "        \n",
+    "    return out_path"
    ]
   },
   {
@@ -488,19 +551,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rasters = []\n",
-    "for i, tile in date_tile_info.iterrows():\n",
+    "ens_rasters = []\n",
+    "all_dirs = []\n",
+    "\n",
+    "for i in range(len(starts)):\n",
+    "    tci_rasters, b08_rasters = [], []\n",
+    "    start_date, end_date = starts[i], ends[i]\n",
+    "    \n",
+    "    date_tile_info = get_tiles(aoi_filename, sentinel_tiles_path)\n",
+    "    loadings = load_images(API_KEY, date_tile_info.tileID.values, start_date, end_date, LOAD_DIR, PRODUCT_TYPE)\n",
+    "    checked = check_nodata(loadings, PRODUCT_TYPE)\n",
+    "    \n",
     "    try:\n",
-    "        tile_folder = Path(checked[tile.tileID])\n",
-    "        print(f'checked: {tile_folder}')\n",
-    "    except Exception as ex:\n",
-    "        print(ex)\n",
+    "        checked = get_min_clouds(checked)\n",
+    "    except Exception:\n",
+    "        print(f'No clean raster found for period from {start_date} to {end_date}, skipping')\n",
+    "        continue\n",
+    "    \n",
+    "    for i, tile in date_tile_info.iterrows():\n",
+    "\n",
+    "        try:\n",
+    "            tile_folder = Path(checked[tile.tileID])\n",
+    "            print(f'filtered: {tile_folder}')\n",
+    "            \n",
+    "        except Exception as ex:\n",
+    "            print(ex)\n",
+    "            continue\n",
+    "\n",
+    "        full_tci_tile = [os.path.join(tile_folder, filename) for filename in os.listdir(tile_folder) if 'TCI_10m.jp2' in filename]\n",
+    "        full_b08_tile = [os.path.join(tile_folder, filename) for filename in os.listdir(tile_folder) if 'B08_10m.jp2' in filename]\n",
+    "        tci_rasters.append(full_tci_tile[0])\n",
+    "        b08_rasters.append(full_b08_tile[0])\n",
+    "        \n",
+    "        all_dirs.append(tile_folder)\n",
+    "\n",
+    "    print(f'rasters to be processed: {len(tci_rasters)}')\n",
+    "    \n",
+    "    if len(tci_rasters)>1:\n",
+    "        raster_path_tci = stitch_tiles(tci_rasters)\n",
+    "        raster_path_b08 = stitch_tiles(b08_rasters)\n",
+    "    elif len(tci_rasters)==1:\n",
+    "        raster_path = tci_rasters[0]\n",
+    "    elif len(tci_rasters)==0:\n",
+    "        print('WARNING: no rasters were found!')\n",
     "        continue\n",
     "        \n",
-    "    full_tile = [os.path.join(tile_folder, filename) for filename in os.listdir(tile_folder) if 'TCI_10m.jp2' in filename]\n",
-    "    rasters.append(full_tile[0])\n",
+    "    if '.jp2' in raster_path:\n",
+    "        out_raster = raster_path.replace('.jp2', '_prediction.tif')\n",
+    "    else:\n",
+    "        out_raster = raster_path.replace('.tif', '_prediction.tif')\n",
     "        \n",
-    "print(f'rasters to be processed: {rasters}')"
+    "    raster_dir = os.path.join(*os.path.split(raster_path)[:-1])\n",
+    "\n",
+    "    pred_tif_path = detector.raster_prediction(raster_dir=raster_dir,\n",
+    "                                               out_raster_path=out_raster,\n",
+    "                                               aoi_path=aoi_filename,\n",
+    "                                               conf_thresh=config['threshold'],\n",
+    "                                               bands=['NIR', 'TCI'])\n",
+    "    ens_rasters.append(pred_tif_path)\n",
+    "ens_rasters"
    ]
   },
   {
@@ -509,43 +618,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if len(rasters)>1:\n",
-    "    raster_path = stitch_tiles(rasters)\n",
-    "elif len(rasters)==1:\n",
-    "    raster_path = rasters[0]\n",
-    "elif len(rasters)==0:\n",
-    "    print('WARNING: no rasters were found!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if '.jp2' in raster_path:\n",
-    "    out_raster = raster_path.replace('.jp2', '_prediction.tif')\n",
-    "else:\n",
-    "    out_raster = raster_path.replace('.tif', '_prediction.tif')\n",
-    "    \n",
     "out_geom = aoi_filename.replace('_aoi.', '_prediction.')\n",
-    "        \n",
-    "pred_tif_path = detector.raster_prediction(in_raster_path=raster_path,\n",
-    "                                            out_raster_path=out_raster,\n",
-    "                                            aoi_path=aoi_filename,\n",
-    "                                            conf_thresh=0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "polygons = detector.process_raster_predictions(pred_tif_path,\n",
-    "                                                shapes_path=out_geom,\n",
-    "                                                aoi_path=aoi_filename, \n",
-    "                                                conf_thresh=0.25)\n",
+    "ens_raster = mean_img_pred(ens_rasters)\n",
+    "\n",
+    "polygons = detector.process_raster_predictions(ens_raster,\n",
+    "                                               shapes_path=out_geom,\n",
+    "                                               aoi_path=aoi_filename, \n",
+    "                                               conf_thresh=config['threshold'],\n",
+    "                                               min_poly_area=10e3)\n",
     "polygons = gpd.GeoDataFrame(polygons)"
    ]
   },
@@ -555,7 +635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if len(filters) != 0:\n",
+    "if filters is not None:\n",
     "    try:\n",
     "        polys = filter_sindex(polygons, filters)\n",
     "    except Exception as e:\n",
@@ -646,6 +726,11 @@
     "try:\n",
     "    os.remove(out_raster)\n",
     "except FileNotFoundError:\n",
+    "    print('No helping raster files were generated')\n",
+    "    \n",
+    "try:\n",
+    "    os.remove(ens_raster)\n",
+    "except FileNotFoundError:\n",
     "    print('No helping raster files were generated')"
    ]
   },
@@ -655,10 +740,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    os.remove(pred_tif_path)\n",
-    "except FileNotFoundError:\n",
-    "    print('No helping prediction raster found, skipping')"
+    "if len(ens_rasters) > 0:\n",
+    "    for raster in ens_rasters:\n",
+    "        try:\n",
+    "            os.remove(raster)\n",
+    "        except FileNotFoundError:\n",
+    "            print('No helping prediction raster found, skipping')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for folder in all_dirs:\n",
+    "    for file in os.listdir(folder):\n",
+    "        try:\n",
+    "            os.remove(os.path.join(folder, file))\n",
+    "        except IsADirectoryError:\n",
+    "            for f in os.listdir(os.path.join(folder, file)):\n",
+    "                os.remove(os.path.join(folder, file, f))\n",
+    "            os.rmdir(os.path.join(folder, file))\n",
+    "        \n",
+    "    try:\n",
+    "        os.rmdir(folder)\n",
+    "    except FileNotFoundError:\n",
+    "        print('No directories with rasters found')"
    ]
   }
  ],
